--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.71.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.19.0",
-    "react-native-svg": "^12.5.0"
+    "react-native-svg": "^12.5.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +29,7 @@
     "@tsconfig/react-native": "^2.0.3",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
